--- a/src/main/resources/GUI/previewPage.fxml
+++ b/src/main/resources/GUI/previewPage.fxml
@@ -6,26 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="convertPane" maxHeight="241.0" maxWidth="721.0" minHeight="200.0" minWidth="700.0" prefHeight="241.0" prefWidth="721.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.SaveMXLController">
+<AnchorPane fx:id="convertPane" maxHeight="241.0" maxWidth="721.0" minHeight="200.0" minWidth="700.0" prefHeight="241.0" prefWidth="721.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.PreviewFileController">
    <children>
-      <Label layoutX="14.0" layoutY="14.0" text="Title" AnchorPane.leftAnchor="14.0">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Button layoutX="574.0" layoutY="183.0" mnemonicParsing="false" onMouseClicked="#cancelButtonClicked" prefHeight="33.0" prefWidth="133.0" text="Cancel" />
-      <Button layoutX="16.0" layoutY="183.0" mnemonicParsing="false" onMouseClicked="#saveButtonClicked" prefHeight="33.0" prefWidth="133.0" text="Save" />
-      <TextField fx:id="titleField" layoutX="14.0" layoutY="34.0" prefHeight="25.0" prefWidth="694.0" />
-      <Label layoutX="14.0" layoutY="69.0" text="Artist">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="artistField" layoutX="14.0" layoutY="89.0" prefHeight="25.0" prefWidth="694.0" />
-      <Label layoutX="16.0" layoutY="125.0" text="File Name">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
      </children>
 </AnchorPane>
