Added basic print button

--- a/src/main/resources/GUI/previewPage.fxml
+++ b/src/main/resources/GUI/previewPage.fxml
@@ -38,7 +38,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
                <children>
-                  <Button fx:id="printButton" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" prefWidth="115.0" text=" Print Music">
+                  <Button fx:id="printButton" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" prefWidth="115.0" text="Print Music" onAction="#printSSHandle">
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
