--- a/src/main/resources/GUI/mainView.fxml
+++ b/src/main/resources/GUI/mainView.fxml
@@ -47,10 +47,10 @@
                     <children>
                   <HBox alignment="CENTER" spacing="5.0" AnchorPane.rightAnchor="0.0">
                      <children>
-                        <Button fx:id="" alignment="CENTER_RIGHT" disable="false" mnemonicParsing="false" onAction="#showPlayerHandle" text="Play MusicXML" />
+                        <Button fx:id="playButton" alignment="CENTER_RIGHT" disable="true" mnemonicParsing="false" onAction="#showPlayerHandle" text="Play MusicXML" />
                         <Button fx:id="showMXLButton" alignment="CENTER_RIGHT" disable="true" mnemonicParsing="false" onAction="#showMXLButtonHandle" text="Show MusicXML" />
                         <Button fx:id="saveMXLButton" alignment="CENTER_RIGHT" disable="true" layoutX="15.0" layoutY="15.0" mnemonicParsing="false" onAction="#saveMXLButtonHandle" text="Save MusicXML" />
-                              <Button fx:id="saveTabButton" alignment="CENTER_RIGHT" disable="true" mnemonicParsing="false" onAction="#saveTabButtonHandle" text="Save Tablature" />
+                        <Button fx:id="saveTabButton" alignment="CENTER_RIGHT" disable="true" mnemonicParsing="false" onAction="#saveTabButtonHandle" text="Save Tablature" />
                         <Button fx:id="previewButton" alignment="CENTER_RIGHT" disable="true" mnemonicParsing="false" onAction="#previewButtonHandle" text="Preview Sheet Music" />
                      </children>
                      <padding>
