--- a/src/main/resources/GUI/settings.fxml
+++ b/src/main/resources/GUI/settings.fxml
@@ -13,7 +13,7 @@
    <right>
       <VBox prefHeight="249.0" prefWidth="93.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="52.0" text="Save" />
+            <Button fx:id="save" mnemonicParsing="false" prefHeight="0.0" prefWidth="52.0" text="Save" />
          </children>
          <BorderPane.margin>
             <Insets left="25.0" />
@@ -29,13 +29,8 @@
    <center>
       <VBox alignment="CENTER" prefHeight="249.0" prefWidth="325.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
-            <ChoiceBox prefWidth="150.0" />
-            <TextField alignment="CENTER_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="12.0" prefWidth="183.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </TextField>
-            <TextField alignment="CENTER_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="0.0" prefWidth="183.0">
+            <ChoiceBox fx:id="size" prefWidth="150.0" />
+            <TextField fx:id="font" alignment="CENTER_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="12.0" prefWidth="183.0">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
