--- a/src/main/resources/GUI/settingsGUI.fxml
+++ b/src/main/resources/GUI/settingsGUI.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.text.Text?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="249.0" prefWidth="458.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.settings">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="249.0" prefWidth="458.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.settingsGUI">
    <right>
       <VBox prefHeight="249.0" prefWidth="93.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="save" mnemonicParsing="false" prefHeight="0.0" prefWidth="52.0" text="Save" />
+            <Button fx:id="save" mnemonicParsing="false" prefHeight="0.0" prefWidth="52.0" onAction="#saveSettingsHandle" text="Save" />
          </children>
          <BorderPane.margin>
             <Insets left="25.0" />
@@ -46,11 +46,6 @@
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Font" wrappingWidth="86.13672256469727" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Note Size" wrappingWidth="83.47005081176758" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Measure Spacing" wrappingWidth="92.13671875">
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
-            </Text>
          </children>
          <BorderPane.margin>
             <Insets left="25.0" />
